--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -17,8 +17,10 @@
 </head>
 
 <body>
-  <img class="logo" src="assets/logo.svg" alt="logo">
-  <img class="deco" src="assets/bg-pattern-1.svg" alt="background1">
+  <header>
+    <img class="logo" src="assets/logo.svg" alt="logo">
+    <img class="deco" src="assets/bg-pattern-1.svg" alt="background1">
+  </header>
   <h1>We make your music sound extraordinary.</h1>
   <p class="description">A system audio equalizer specifically designed for Android and iOS. Freely tune the
     way your music sounds with a professional grade parametric EQ & volume mixer. Control
@@ -29,29 +31,34 @@
     <img class="phone" src="assets/illustration-app.png" alt="phone">
     <div class="content">
       <h2>Premium EQ</h2>
-      <p class="content-description">Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take
+      <p class="content-description">Get expert-level control with a robust equalizer, volume mixer, and spatial audio.
+        Take
         your listening experience to a whole new level and access all our incredible features!</p>
-      <p>$4 / month</p>
+      <p class="content-price"><span class="big-price">$4</span> / month</p>
+      <button class="ios-button" type="button"><img class="apple-icon" src="assets/icon-apple.svg" alt="apple">iOS
+        Download</button>
+      <button class="android-button" type="button"><img class="android-icon" src="assets/icon-android.svg"
+          alt="apple">Android
+        Download</button>
     </div>
   </div>
 
-
-  <!-- A system audio equalizer specifically designed for Android and iOS. Freely tune the 
-  way your music sounds with a professional grade parametric EQ & volume mixer. Control 
-  bass, mids, treble, gain control, reverb, and more!
-
-  Premium EQ
-
-  Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take 
-  your listening experience to a whole new level and access all our incredible features!
-
-  $4 / month
-
-  iOS Download
-  Android Download
-
-  All rights reserved © Equalizer 2021
-  Have any problems? Contact us via social media or email us at equalizer@example.com -->
+  <footer>
+    <div class="footer">
+      <div class="logo-footer">
+        <img src="assets/logo.svg" alt="logo">
+      </div>
+      <div class="footer-content">
+        <p>All rights reserved © Equalizer 2021
+          Have any problems? Contact us via social media or email us at <span style="font-weight: bold;" >equalizer@example.com</span></p>
+      </div>
+      <div class="icons">
+        <img class="facebook-icon" src="assets/icon-facebook.svg" alt="facebook">
+        <img class="facebook-icon" src="assets/icon-instagram.svg" alt="instagram">
+        <img class="facebook-icon" src="assets/icon-twitter.svg" alt="twitter">
+      </div>
+    </div>
+  </footer>
 
 </body>
 
