--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -49,7 +49,7 @@
         <img src="assets/logo.svg" alt="logo">
       </div>
       <div class="footer-content">
-        <p>All rights reserved © Equalizer 2021
+        <p>All rights reserved © Kenneth 2021
           Have any problems? Contact us via social media or email us at <span style="font-weight: bold;" >equalizer@example.com</span></p>
       </div>
       <div class="icons">
